--- a/downloads.html
+++ b/downloads.html
@@ -592,6 +592,11 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_20.10/ ./</code></small>
                             </pre>
 
+                            <h3>Ubuntu 21.04 (x86_64, aarch64)</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_21.04/ ./</code></small>
+                            </pre>
+
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
                             <h3>openSUSE Leap 15.0 (64-bit only)</h3>
