Update IRC to libera.chat.

--- a/community.html
+++ b/community.html
@@ -87,10 +87,6 @@
     <section-area style="width: 100%;">
       <div class="link-grid">
         <div class="link-button">
-          <h1><a href="https://webchat.freenode.net/#openscad">Chat</a></h1>
-          <small>Chat with developers and users on freenode</small>
-        </div>
-        <div class="link-button">
           <h1><a href="http://forum.openscad.org/">Forum</a></h1>
           <small>Join the community on the Forum / Mailing list</small>
         </div>
@@ -146,8 +142,9 @@
 		<section id="irc">
 			<h1>IRC Channel</h1>
       <ul>
-        <li>Join via the freenode <a href="https://webchat.freenode.net/#openscad">web chat</a></li>
-        <li>Connect with an IRC client to <a href="irc:openscad@irc.freenode.net" target="_blank">#openscad</a> on irc.freenode.net</li>
+        <!-- <li>Join via the libera.chat <a href="https://webchat.libera.chat/#openscad">web chat</a></li>-->
+        <li>Connect with an IRC client to <a href="irc:openscad@irc.libera.chat" target="_blank">#openscad</a> on irc.libera.chat</li>
+        <li>Additional documentation on how to connect can be found at <a href="https://libera.chat/guides">https://libera.chat/guides</a></li>
       </ul>
 		</section>
 		
