--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
 		</ul>
 	</div>
 	
-	<article>
+  <article>
+    <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
+      <p>OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>, see you in #openscad there...</p>
+    </section-area>
 
     <section>
 			<h1><strong><span class="green">Open</span>SCAD</strong> is software for creating solid 3D CAD objects.</h1>
