Add link to manual for PI.

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -48,7 +48,7 @@
         <dl>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#The_Undefined_Value">undef</a></code></dt>
           <dd>undefined value</dd>
-          <dt><code>PI</code></dt>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#Numbers">PI</a></code></dt>
           <dd>mathematical constant <a href="https://en.wikipedia.org/wiki/Pi">&pi;</a> (~3.14159)</dd>
         </dl>
       </article>
