Add note about freenode channel seizure.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
   <article>
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
       <p>OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>, see you in #openscad there...</p>
+      <p>
+        <small>
+        2021-05-26: The #openscad channel on Freenode was forcibly closed over night without warning or any kind
+        of communication. This means goodbye Freenode a little bit more abrupt and without further chance to help
+        with the transition. Please find documentation on how to connect to <a href="https://libera.chat/">libera.chat</a>
+        at <a href="https://libera.chat/guides">https://libera.chat/guides</a>.
+        </small>
+      </p>
     </section-area>
 
     <section>
