Add web chat links to libera.chat.

--- a/community.html
+++ b/community.html
@@ -142,7 +142,7 @@
 		<section id="irc">
 			<h1>IRC Channel</h1>
       <ul>
-        <!-- <li>Join via the libera.chat <a href="https://webchat.libera.chat/#openscad">web chat</a></li>-->
+        <li>Join via the libera.chat <a href="https://web.libera.chat/?channel=#openscad">web chat</a> (KiwiIRC)</li>
         <li>Connect with an IRC client to <a href="irc:openscad@irc.libera.chat" target="_blank">#openscad</a> on irc.libera.chat</li>
         <li>Additional documentation on how to connect can be found at <a href="https://libera.chat/guides">https://libera.chat/guides</a></li>
       </ul>
