--- a/index.html
+++ b/index.html
@@ -87,13 +87,15 @@
 	
   <article>
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
-      <p>OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>, see you in #openscad there...</p>
+      <p>OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>, see you in
+        <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> there...</p>
       <p>
         <small>
         2021-05-26: The #openscad channel on Freenode was forcibly closed over night without warning or any kind
         of communication. This means goodbye Freenode a little bit more abrupt and without further chance to help
         with the transition. Please find documentation on how to connect to <a href="https://libera.chat/">libera.chat</a>
-        at <a href="https://libera.chat/guides">https://libera.chat/guides</a>.
+        at <a href="https://libera.chat/guides">https://libera.chat/guides</a> or simply join via
+        <a href="https://web.libera.chat/?channel=#openscad">web chat</a> (KiwiIRC).
         </small>
       </p>
     </section-area>
@@ -120,6 +122,10 @@
 
     <section-area>
       <div class="link-grid">
+        <div class="link-button">
+          <h1><a href="https://web.libera.chat/?channel=#openscad">Chat</a></h1>
+          <small>Chat with developers and users on libera.chat</small>
+        </div>
         <div class="link-button">
           <h1><a href="documentation.html#tutorial">Tutorial</a></h1>
           <small>Get started with OpenSCAD</small>
