Update documentation links to Round-Anything library.

--- a/libraries.html
+++ b/libraries.html
@@ -125,7 +125,8 @@
          parts, but it also embodies a robust approach to developing OpenSCAD parts.</p>
       <ul>
         <li><a href="https://github.com/Irev-Dev/Round-Anything">Library</a></li>
-        <li><a href="https://kurthutten.com/blog/round-anything-api/">Documentation</a></li>
+        <li><a href="https://learn.cadhub.xyz/docs/round-anything/overview/">Overview</a><small> - <i>A pragmatic approach to OpenSCAD design</i></small></li>
+        <li><a href="https://learn.cadhub.xyz/docs/round-anything/api-reference/">Documentation</a><small> - <i>API reference and examples</i></small></li>
         <li>License: MIT</li>
       </ul>
       <p style="clear: both"></p>
