Add Fedora 34, remove Fedora 30.

--- a/downloads.html
+++ b/downloads.html
@@ -616,11 +616,6 @@
                             
                             <h2>Fedora packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
 
-                            <h3>Fedora 30 (x86_64, i586, armv7l, aarch64, ppc64le)</h3>
-                            <pre>
-                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_30/</code></small>
-                            </pre>
-
                             <h3>Fedora 31 (x86_64, armv7l, aarch64, ppc64le)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_31/</code></small>
@@ -634,6 +629,11 @@
                             <h3>Fedora 33 (x86_64, armv7l, aarch64, ppc64le)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_33/</code></small>
+                            </pre>
+
+                            <h3>Fedora 34 (x86_64, armv7l, aarch64, ppc64le)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_34/</code></small>
                             </pre>
 
                             <h3>Fedora Rawhide (x86_64, i586)</h3>
