Added Programming with OpenSCAD book

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -100,6 +100,36 @@
       <h1>English</h1>
       <p style="clear: both"><br></p>
       <p>
+        <img class="libimg" width="200" src="images/ProgrammingWithOpenSCAD.png" align="right">
+        <h2>Programming with OpenSCAD
+	<i>- A Beginner's Guide to Coding 3D-Printable Objects</i></h2>
+      <p>
+	  This book channels OpenSCAD’s visual benefits and
+	  user-friendliness into a STEAM-focused, project-based
+	  tutorial that teaches the basics of coding, 3D printing, and
+	  computational thinking while you develop your spatial
+	  reasoning by creating 3D designs with OpenSCAD.
+        </p>
+        <p>
+	  Accessibly written for a wide audience (advanced middle
+	  schoolers, high school students, college students, artists,
+	  makers and lifelong-learners alike), this is the perfect
+	  guide to becoming proficient at programming in general and
+	  3D modeling in particular.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: Justin Gohde &amp; Marius Kintel</li>
+          <li>Publisher: No Starch Press
+            &nbsp <a href="https://nostarch.com/programmingopenscad"><span class="fas fa-external-link-alt"</span></a>
+          </li>
+          <li>Date: July 2021</li>
+        </ul>
+        </div>
+        <p>Read more at <a href="https://programmingwithopenscad.github.io/">programmingwithopenscad.github.io</a></p>
+      </p>
+      <p style="clear: both"><br></p>
+      <p>
         <img class="libimg" width="200" src="images/MasteringOpenSCAD.png" align="right">
         <h2>Mastering OpenSCAD within 10 projects</h2>
         <p>
