Purge freenode links.

--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
         <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> there...</p>
       <p>
         <small>
-        2021-05-26: The #openscad channel on Freenode was forcibly closed over night without warning or any kind
-        of communication. This means goodbye Freenode a little bit more abrupt and without further chance to help
-        with the transition. Please find documentation on how to connect to <a href="https://libera.chat/">libera.chat</a>
-        at <a href="https://libera.chat/guides">https://libera.chat/guides</a> or simply join via
-        <a href="https://web.libera.chat/?channel=#openscad">web chat</a> (KiwiIRC).
+          2021-06-15: Freenode, which hosted the OpenSCAD IRC channel for years has
+          <a href="https://www.devever.net/~hl/freenode_suicide">committed suicide</a> and a new empty network was
+          created in it's place under the same name. So please note that any OpenSCAD related channels or user
+          registrations that might appear there are not associated with the OpenSCAD project.
         </small>
       </p>
     </section-area>
