--- a/news.html
+++ b/news.html
@@ -101,7 +101,7 @@
           Project suggestions have been posted to our <a href="https://opencax.github.io/">OpenCAx</a> site
           which lists all the projects proposed under the BRL-CAD umbrella. If you're interested in participating,
           please get in touch on the <a href="https://www.openscad.org/community.html#forum">mailing list</a> or
-          join the <a href="https://webchat.freenode.net/#openscad">#openscad channel on IRC</a> to discuss details
+          join the #openscad channel on IRC to discuss details
           and to help you get your feet wet. We're also open to new ideas than just the ones listed on the proposal
           page.
         </p>
