Update forum / irc info.

--- a/community.html
+++ b/community.html
@@ -87,8 +87,8 @@
     <section-area style="width: 100%;">
       <div class="link-grid">
         <div class="link-button">
-          <h1><a href="http://forum.openscad.org/">Forum</a></h1>
-          <small>Join the community on the Forum / Mailing list</small>
+          <h1><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org">Mailing list</a></h1>
+          <small>Join the community on the Mailing list</small>
         </div>
         <div class="link-button">
           <h1><a href="https://github.com/openscad/openscad/issues">Bug reports</a></h1>
@@ -132,13 +132,19 @@
 		<section id="forum">
 			<h1>Forum / Mailing List</h1>
       <ul>
-        <li><a href="http://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</li>
+        <li><s><a href="http://forum.openscad.org" target="_blank">Forum</a> (provided by Nabble)</s></li>
         <li><a href="https://lists.openscad.org/list/discuss.lists.openscad.org" target="_blank">Mailing list info</a></li>
-        <li><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org" target="_blank">Mailing list archives</a></li>
+        <li><a href="https://lists.openscad.org/empathy/list/discuss.lists.openscad.org" target="_blank">Mailing list archive</a></li>
       </ul>
-      <br/>Note: The mailing list and forums are bidirectionally connected.
+      <br/>
+      <p>Note: As of 2021-06-21 the forum and mailing list are not connected anymore. Please hold on posting there for now.
+      You can use the mailing list directly via email <code>discuss@lists.openscad.org</code> or use the web interface
+      linked above as "Mailing list archive".</p>
+      <p>Posting via the web interface of the mailing list may require creating a new login via
+      <a href="https://lists.openscad.org/register">https://lists.openscad.org/register</a>
+      using the same email address that was used for the subscription before.</p>
 		</section>
-		
+
 		<section id="irc">
 			<h1>IRC Channel</h1>
       <ul>
@@ -147,7 +153,11 @@
         <li>The chat room is also available via <a href="https://matrix.org/">Matrix</a> as <a href="https://app.element.io/#/room/#openscad:libera.chat">#openscad:libera.chat</a></li>
         <li>Additional documentation on how to connect can be found at <a href="https://libera.chat/guides">https://libera.chat/guides</a></li>
       </ul>
-		</section>
+      <p>2021-06-15: Freenode, which hosted the OpenSCAD IRC channel for years has
+      <a href="https://www.devever.net/~hl/freenode_suicide">committed suicide</a> and a new empty network was
+      created in it's place under the same name. So please note that any OpenSCAD related channels or user
+      registrations that might appear there are not associated with the OpenSCAD project.</p>
+  </section>
 		
 		<section id="other">
 			<h1>Other</h1>
