--- a/index.html
+++ b/index.html
@@ -87,15 +87,9 @@
 	
   <article>
     <section-area style="width: 100%; text-align: center; background-color: #e5f1d3; border: 1px solid #f9d72c;">
-      <p>OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>, see you in
-        <a href="https://web.libera.chat/?channel=#openscad">#openscad</a> there...</p>
       <p>
-        <small>
-          2021-06-15: Freenode, which hosted the OpenSCAD IRC channel for years has
-          <a href="https://www.devever.net/~hl/freenode_suicide">committed suicide</a> and a new empty network was
-          created in it's place under the same name. So please note that any OpenSCAD related channels or user
-          registrations that might appear there are not associated with the OpenSCAD project.
-        </small>
+        OpenSCAD IRC channel moved to <a href="https://libera.chat/">libera.chat</a>. Chat with us in channel
+        <a href="https://web.libera.chat/?channel=#openscad">#openscad</a>.
       </p>
     </section-area>
 
