--- a/community.html
+++ b/community.html
@@ -157,6 +157,9 @@
       <a href="https://www.devever.net/~hl/freenode_suicide">committed suicide</a> and a new empty network was
       created in it's place under the same name. So please note that any OpenSCAD related channels or user
       registrations that might appear there are not associated with the OpenSCAD project.</p>
+      <p>2021-07-07: <span style="color:red; font-weight: bold;">Warning:</span> make sure to connect to the
+      correct domain. Freenode decided to own <s>irc.libera.net</s> and point that to their own servers. This looks
+      like a very bad case of name squatting so please watch out for this.</p>
   </section>
 		
 		<section id="other">
