--- a/downloads.html
+++ b/downloads.html
@@ -552,6 +552,11 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_10/ ./</code></small>
                             </pre>
 
+                            <h3>Debian 11 (Bullseye)</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_11/ ./</code></small>
+                            </pre>
+
                             <h3>Debian Testing</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_Testing/ ./</code></small>
