Remove Ubuntu 16.04, add OpenSUSE Leap 15.2.

--- a/downloads.html
+++ b/downloads.html
@@ -567,11 +567,6 @@
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_Unstable/ ./</code></small>
                             </pre>
 
-                            <h3>Ubuntu 16.04</h3>
-                            <pre>
-                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_16.04/ ./</code></small>
-                            </pre>
-
                             <h3>Ubuntu 18.04</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_18.04/ ./</code></small>
@@ -612,6 +607,11 @@
                             <h3>openSUSE Leap 15.1 (64-bit only)</h3>
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.1/</code></small>
+                            </pre>
+
+                            <h3>openSUSE Leap 15.2 (64-bit only)</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/openSUSE_Leap_15.2/</code></small>
                             </pre>
 
                             <h3>openSUSE Tumbleweed</h3>
