Remove static gallery file, use generated one from separate git repo.
Git repo for list maintenance: https://github.com/openscad/openscad-lists

Data is converted and generated via github action and released via github
release https://github.com/openscad/openscad-lists/releases/tag/continous

Release data is pulled from files.openscad.org so we don't hit github on
every page load.

--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,10 @@
           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
           })();
         </script>
+	<script>
+		function gallery(data) { _gallery = data; }
+	</script>
+	<script type="text/javascript" src="https://files.openscad.org/lists/gallery.jsonp"></script>
 </head>
 <body>
 
