Update related links, add cadhub

--- a/about.html
+++ b/about.html
@@ -110,10 +110,11 @@
 
 			<p>A number of projects were inspired by OpenSCAD, or in some other way is related to OpenSCAD. This is an incomplete list of some project worth taking a look at:</p>
 				<ul>
-				  <li><a href="http://openjscad.org/">OpenJSCAD</a></li>
-				  <li><a href="http://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
-				  <li><a href="http://www.implicitcad.org/">ImplicitCAD</a></li>
-				  <li><a href="http://libre3d.com/">Libre 3D</a></li>
+				  <li><a href="https://openjscad.xyz">OpenJSCAD</a></li>
+				  <li><a href="https://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
+				  <li><a href="https://implicitcad.org">ImplicitCAD</a></li>
+				  <li><a href="https://libre3d.com">Libre 3D</a></li>
+				  <li><a href="https://cadhub.xyz">CadHub</a></li>
 				</ul>
 			</section>
 
