--- a/about.html
+++ b/about.html
@@ -114,6 +114,7 @@
 				  <li><a href="https://gilesbathgate.com/category/rapcad/">RapCAD</a></li>
 				  <li><a href="https://implicitcad.org">ImplicitCAD</a></li>
 				  <li><a href="https://libre3d.com">Libre 3D</a></li>
+				  <li><a href="https://www.blockscad3d.com/editor/">BlocksCAD</a></li>
 				  <li><a href="https://cadhub.xyz">CadHub</a></li>
 				</ul>
 			</section>
