Remove Debian 9, add Ubuntu 21.10.

--- a/downloads.html
+++ b/downloads.html
@@ -542,11 +542,6 @@
 				
 			    <p>The repository links below are shown as <code>https</code>, please check for your installation if <code>https</code> is supported. In Debian/Ubuntu this is usually handled by the <code>apt-transport-https</code> package. OBS also supports HTTP links, but it's recommended to use <code>https</code> whenever possible.</p>
 
-                            <h3>Debian 9 (Stretch)</h3>
-                            <pre>
-                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_9.0/ ./</code></small>
-                            </pre>
-
                             <h3>Debian 10 (Buster)</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Debian_10/ ./</code></small>
@@ -585,6 +580,11 @@
                             <h3>Ubuntu 21.04 (x86_64, aarch64)</h3>
                             <pre>
                                 <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_21.04/ ./</code></small>
+                            </pre>
+
+                            <h3>Ubuntu 21.10 (x86_64, aarch64)</h3>
+                            <pre>
+                                <small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_21.10/ ./</code></small>
                             </pre>
 
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
