--- a/libraries.html
+++ b/libraries.html
@@ -106,6 +106,16 @@
         <li>License: GPL-3.0-or-later</li>
       </ul>
       <p style="clear: both"></p>
+      <img class="libimg" src="images/ub.gif" width="200" align="right">
+      <h2>UB.scad</h2>
+      <p>This library is a full 3D printing workflow solution for OpenSCAD, bringing tools for modifying and
+         generating 3D objects, view helpers and a selection of mechanical parts.</p>
+      <ul>
+        <li><a href="https://github.com/UBaer21/UB.scad">Library</a></li>
+        <li><a href="https://github.com/UBaer21/UB.scad/blob/main/README.md">Documentation</a></li>
+        <li>License: CC0-1.0</li>
+      </ul>
+      <p style="clear: both"></p>
       <img class="libimg" src="images/bolts.gif" width="200" align="right">
       <h2>BOLTS</h2>
       <p>BOLTS is an Open Library of Technical Specifications.</p>
